@@ -13,8 +13,8 @@
   an error is signalled.
 }
 \usage{
-assertError(expr, verbose = FALSE)
-assertWarning(expr, verbose = FALSE)
+assertError(expr, classes = "error", verbose = FALSE)
+assertWarning(expr, classes = "warning", verbose = FALSE)
 assertCondition(expr, ..., .exprString = , verbose = FALSE)
 }
 \arguments{
@@ -22,7 +22,7 @@ assertCondition(expr, ..., .exprString = , verbose = FALSE)
     \code{\link{tryCatch}(expr, ..)}.}
   \item{\dots}{\code{\link{character}} strings corresponding to the
     classes of the conditions that would satisfy the assertion; e.g., \code{"error"} or
-    \code{"warning"}. If none are specified, any condition will
+    \code{"warning"}.  If none are specified, any condition will
     satisfy the assertion.  See the details section. }
   \item{.exprString}{The string to be printed corresponding to
     \code{expr}. By default, the actual \code{expr} will be
